Align shift status priority